# Offline-server-1

./: app.py  deploy.sh  pyproject.toml  requirements.txt
