[tool.poetry]
name = "flask-instagrapi-app"
version = "0.1.0"
description = "A Flask app using instagrapi."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
instagrapi = "^1.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
